--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,7 @@ install:
   - wget -O - http://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
   - sudo apt-get update -y
   - sudo apt-get install clang-3.9
-  - ls /usr/bin
-  - sudo rm /usr/bin/clang && sudo ln -s /usr/bin/clang-3.9 /usr/bin/clang
-  - sudo rm /usr/bin/clang++ && sudo ln -s /usr/bin/clang++-3.9 /usr/bin/clang++-3.9
+env: COMPILER=clang++-3.9
 script:
   - cmake -G "Unix Makefiles"
   - make -j $[$(grep -c ^processor /proc/cpuinfo)2]
