--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,14 @@ install:
   - wget -O - http://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
   - sudo apt-get update -y
   - sudo apt-get install clang-3.9
-env: COMPILER=clang++-3.9
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-5
+      - gcc-5
 script:
+  - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.9" CC="clang-3.9"; fi
   - cmake -G "Unix Makefiles"
   - make -j $[$(grep -c ^processor /proc/cpuinfo)2]
