--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ addons:
       - gcc-5
 script:
   - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.9" CC="clang-3.9"; fi
-  - cmake -G "Unix Makefiles"
+  - cmake -G "Unix Makefiles" -DCLANG_WITH_LIB_STD_CPP=true
   - make -j $[$(grep -c ^processor /proc/cpuinfo)2]
