Update travis-ci config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ set(CLANG_STD_CXX
 )
 
 if (${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
-	if (CLANG_WITH_LIB_STD_CPP)
+	if (NOT CLANG_WITH_LIB_STD_CPP)
 		set( LINKED_LIBRARIES
 			${LINKED_LIBRARIES}
 			${CLANG_STD_CXX}
